// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidgetSmallText matches custom props snapshot 1`] = `
<div
  class="c-card c-bg-info"
>
  <div
    class="c-card-header"
  >
    <div
      class="c-font-weight-bold"
    >
      <span>
        rightHeader
      </span>
       
      <span
        class="c-float-right"
      >
        leftHeader
      </span>
    </div>
     
    <div>
      <span>
        <small>
          rightFooter
        </small>
      </span>
       
      <span
        class="c-float-right"
      >
        <small>
          leftFooter
        </small>
      </span>
    </div>
     
  </div>
</div>
`;

exports[`CWidgetSmallText matches default props snapshot 1`] = `
<div
  class="c-card c-bg-primary"
>
  <div
    class="c-card-header"
  >
    <div
      class="c-font-weight-bold"
    >
      <span>
        rightHeader:string
      </span>
       
      <span
        class="c-float-right"
      >
        leftHeader:string
      </span>
    </div>
     
    <div>
      <span>
        <small>
          rightFooter:string
        </small>
      </span>
       
      <span
        class="c-float-right"
      >
        <small>
          leftFooter:string
        </small>
      </span>
    </div>
     
  </div>
</div>
`;
